--- a/default.html
+++ b/default.html
@@ -3,5 +3,7 @@
 <body>
 <p>This is John's site. Hello!</p>
 <a href="info.json">Json file</a>
+<a href="yahtzee-dice-roller-extern-js.html">Yahtzee Dice Roller</a>
+<a href="yahtzee-dice-roller.html">Yahtzee Dice Roller External</a>
 </body>
 </html>
