Yahtzee Dice Roller Plus

--- a/default.html
+++ b/default.html
@@ -3,7 +3,12 @@
 <body>
 <p>This is John's site. Hello!</p>
 <a href="info.json">Json file</a>
+<br><br/>
 <a href="yahtzee-dice-roller-extern-js.html">Yahtzee Dice Roller</a>
+<br><br/>
 <a href="yahtzee-dice-roller.html">Yahtzee Dice Roller External</a>
+<br><br/>
+<a href="yahtzee-dice-roller-plus.html">Yahtzee Dice Roller Plus</a>
+<br><br/>
 </body>
 </html>
