--- a/default.html
+++ b/default.html
@@ -2,7 +2,7 @@
 <header><title>John's Site</title></header>
 <body>
 <p>This is John's site. Hello!</p>
-<a href="info.json">Json file</a>
+<a href="myInfo.json">Json file</a>
 <br><br/>
 <a href="yahtzee-dice-roller-extern-js.html">Yahtzee Dice Roller</a>
 <br><br/>
